--- a/src/pages/Components/Show.module.css
+++ b/src/pages/Components/Show.module.css
@@ -45,6 +45,25 @@
     z-index: 3;
 }
 
+.season {
+    display: flex;
+    gap: 1em;
+}
+
+.image_season img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 2em;
+    filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.226));
+}
+
+.image_season {
+    width: 10em;
+    height: 20em;
+    z-index: 3;
+}
+
 .title {
     padding-bottom: 1em;
     font-weight: 700;
