--- a/src/pages/Components/ShowSmall.module.css
+++ b/src/pages/Components/ShowSmall.module.css
@@ -50,7 +50,7 @@
 
     .receipt {
         height: 10em;
-        width: 22em;
+        width: unset;
         font-size: 0.9em;
     }
     
@@ -70,10 +70,7 @@
         padding: 0em;
         height: min-content;
         margin: 0;
-        position: absolute;
-        top: 45%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
+        margin-bottom: 0;
     }
 
     .receipt .details {
