--- a/src/pages/Components/ShowSmall.module.css
+++ b/src/pages/Components/ShowSmall.module.css
@@ -35,7 +35,6 @@
 }
 
 .receipt:hover .description {
-    padding: 1em;
     filter: grayscale(0);
 }
 
@@ -49,8 +48,8 @@
 @media only screen and (max-width: 80em) {
 
     .receipt {
-        height: 10em;
-        width: unset;
+        height: 13em;
+        width: 100%;
         font-size: 0.9em;
     }
     
@@ -61,14 +60,13 @@
 
     .receipt .description {
         padding: 0.5em;
-        padding-left: 2em;
-        padding-right: 2em;
-        position: relative;
+        padding-left: 1em;
+        padding-right: 1em;
     }
 
     .receipt .title {
         padding: 0em;
-        height: min-content;
+        height: max-content;
         margin: 0;
         margin-bottom: 0;
     }
