--- a/src/pages/Components/ShowSmall.module.css
+++ b/src/pages/Components/ShowSmall.module.css
@@ -1,85 +1,59 @@
 @value colors: "../colors.css";
 @value backgroundColor, darkestColor, mainColor, lightdarkColor, lightColor  from colors;
 
-.receipt {
-    margin: 0 auto;
-    position: relative;
-    background-color: lightColor;
+.main
+{
     display: grid;
-    grid-template-columns: auto 1fr;
-    border-radius: 2em;
-    width: 30em;
-    max-height: 20em;
-    height: 12em;
+    grid-template-columns: auto minmax(0, 1fr) 5.5rem;
+    border: 5px solid white;
+    border-radius: 1rem;
     overflow: hidden;
-    filter: drop-shadow(0px 5px 5px rgba(34, 34, 34, 0.11));
+    background-color: white;
 }
 
-.receipt:hover {
-    cursor: pointer;
-    filter: drop-shadow(0px 0px 10px #ffffff);
-}
-.receipt .image {
-    filter: drop-shadow(0px 5px 10px rgba(99, 2, 2, 0.199));
-}
-
-.receipt .title {
-    font-weight: 700;
-    margin-bottom: 0.5em;
-    color: mainColor;
+.text {
+    padding: 0.5rem;
+    font-size: small;
+    line-height: 1.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.receipt .description {
-    padding: 1em;
-    filter: grayscale(1);
+.title {
+    padding: 0.5rem;
+    font-weight: bold;
+    line-height: 1.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.receipt:hover .description {
-    filter: grayscale(0);
+.main .image {  
+    height: 10rem;
+    width: 8rem;
 }
 
-.receipt > div > img.background {
-    width: 12em;
-    height: 12em;
+.main .image img.background {
+    width: 100%;
+    height: 100%;
     object-fit: cover;
     filter: none ;
 }
 
+.buttons {
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+    gap: 1rem;
+}
+
 @media only screen and (max-width: 80em) {
-
-    .receipt {
-        height: 13em;
-        width: max-content;
-        font-size: 0.9em;
-    }
-    
-    .receipt > div > img.background {
-        width: 10em;
-        height: 13em;
+    .main {
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        height: 10rem;
     }
 
-    .receipt .description {
-        padding: 0.5em;
-        padding-left: 1em;
-        padding-right: 1em;
-    }
-
-    .receipt .title {
-        padding: 0em;
-        height: max-content;
-        margin: 0;
-        margin-bottom: 0;
-    }
-
-    .receipt .details {
-        font-size: 0;
-        padding: 0;
-        margin: 0;
-        height: 0;
-    }
-
-    .receipt > div > img.background {
-        width: 10em;
-        height: 13em;
+    .main .image {  
+        width: 7rem;
     }
 }
